syntax = "proto3";

option java_multiple_files = true;
option java_package="multipaxosrpc";

package multipaxosrpc;

service MultiPaxosRPC {
  rpc Heartbeat (HeartbeatRequest) returns (HeartbeatResponse) {}
}

message HeartbeatRequest {
  int64 ballot = 1;
  int64 last_executed = 2;
  int64 global_last_executed = 3;
}

message HeartbeatResponse {
  int64 last_executed = 1;
}